fix yeti's smile, fix yeti's btns' color, andd feature to stop music after collapsing app'

--- a/src/components/sound-toggler/sound-toggler.component.scss
+++ b/src/components/sound-toggler/sound-toggler.component.scss
@@ -26,7 +26,8 @@ sound-toggler {
       background-image: url('../assets/icon/icon__no-sound--white.svg');
     }
   }
-  &.btn--id--10 .btn {
+
+  .screen__btns--monster--10 & .btn {
     background-image: url('../assets/icon/icon__sound--black.svg');
 
     &--no-sound {
